// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TradeStuffSeparator renders correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <PeachText
    style={
      {
        "color": "#7D675E",
      }
    }
  >
    trade stuff
  </PeachText>
  <HorizontalLine
    style={
      [
        {
          "flexGrow": 1,
          "marginLeft": 8,
        },
        false,
      ]
    }
  />
</View>
`;

exports[`TradeStuffSeparator renders correctly when the dispute is active 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <PeachText
    style={
      {
        "color": "#DF321F",
      }
    }
  >
    trade stuff
  </PeachText>
  <HorizontalLine
    style={
      [
        {
          "flexGrow": 1,
          "marginLeft": 8,
        },
        {
          "backgroundColor": "#FFD1CA",
        },
      ]
    }
  />
</View>
`;
